--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-md-12 px-0">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid mx-3">
-                        <a class="navbar-brand" href="#"><img class="px-3 logo" src="/.images/Logo VEO 1.png" alt="Logo"></a>
+                        <a class="navbar-brand" href="#"><img class="px-3 logo" src="./images/Logo VEO 1.png" alt="Logo"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
